# Project_OOP

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_prod_itarator_py.html  z_145eef247bfb46b6_products_py.html  z_145eef247bfb46b6_utils_py.html
src/: prod_itarator.py  products.py  utils.py
tests/: conftest.py  test_prod_iterator.py  test_products.py  test_utils.py
