[tool.poetry]
name = "project-oop"
version = "0.1.0"
description = ""
authors = ["iua.suranov <pradedura@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
ypy = "^0.2"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
