[tool.poetry]
name = "project-oop"
version = "0.1.0"
description = ""
authors = ["iua.suranov <pradedura@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
ypy = "^0.2"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",


    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",


    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",


    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
# Mandatory requirement
fail_under = 75